# projet_final_data_viz

./: .env  README.md  api.py  app.py  auth.py  claude_code.py  conf.py  genindex.html  github_dataset.csv  index.html  index.rst  objects.inv  pyproject.toml  sample_sales_data.csv  search.html  searchindex.js  starwars_vehicles.csv  tapas_code.py  utils.py
.doctrees/: index.doctree
.github/workflows/: sphinx_doc.yaml  test.yaml  tests.yaml
_sources/: index.rst.txt
docs/: conf.py
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  projet_final_data_viz.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  modules.doctree  projet_final_data_viz.doctree
docs/_build/html/_static/: documentation_options.js
docs/source/: modules.rst  projet_final_data_viz.rst
source/: modules.html  projet_final_data_viz.html
src/projet_final_data_viz/: agents.py  app.py  auth.py  description.py  display.py  tapas_code.py
tests/: test_api.py  test_app.py  test_auth.py  test_description.py  test_tapas.py
