[project]
name = "projet-final"
version = "0.1.0"
description = ""
authors = [
    {name = "aichaa28", email = "aicha.ettriki28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"  # Modification pour supporter Python 3.10+

dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "anthropic (>=0.45.2,<0.46.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.4"
pre-commit = "^4.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"  # Maintien de Sphinx 8.1.3 compatible avec Python 3.10+
sphinx-rtd-theme = "^3.0.2"

[tool.ruff]
line-length = 150


[tool.poetry]
packages = [
    { include = "src" }  
]
